--- a/test/quadratic/Test Quadratic 5-5.ipynb
+++ b/test/quadratic/Test Quadratic 5-5.ipynb
@@ -636,7 +636,8 @@
       "Epoch 173, Validation Loss: 0.69\n",
       "Early stopping at epoch 173\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 242.28 sec.\n"
      ]
     }
    ],
@@ -663,29 +664,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 256.04it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 263.99it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      0.628863          0.000517      0.002902\n",
-      "std       0.732975          0.004087      0.001521\n",
-      "min      -0.547950          0.000000      0.001000\n",
-      "25%       0.036326          0.000000      0.002034\n",
-      "50%       0.485976          0.000000      0.002457\n",
-      "75%       1.087095          0.000000      0.003070\n",
-      "max       2.879682          0.059200      0.014720\n",
-      "Number of infeasible solution: 28\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     0.608448          0.000692      0.002647\n",
+      "std      0.708577          0.005546      0.000828\n",
+      "min     -0.486871          0.000000      0.000999\n",
+      "25%      0.042327          0.000000      0.002000\n",
+      "50%      0.412930          0.000000      0.002510\n",
+      "75%      0.959334          0.000000      0.003004\n",
+      "max      2.871365          0.054509      0.005176\n",
+      "Number of infeasible solution: 3\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -714,35 +715,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/cq_lr_5-5.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "c643b97d-566e-41ac-aa72-1e377c33c672",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean     0.608448          0.000692      0.003124\n",
-      "std      0.708577          0.005546      0.001360\n",
-      "min     -0.486871          0.000000      0.001035\n",
-      "25%      0.042327          0.000000      0.002137\n",
-      "50%      0.412930          0.000000      0.003006\n",
-      "75%      0.959334          0.000000      0.003290\n",
-      "max      2.871365          0.054509      0.007928\n",
-      "Number of infeasible solution: 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_lr_5-5.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
@@ -967,7 +939,8 @@
       "Epoch 147, Validation Loss: 0.76\n",
       "Early stopping at epoch 147\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 217.01 sec.\n"
      ]
     }
    ],
@@ -994,29 +967,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 258.81it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 224.91it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      0.674591          0.000427      0.002907\n",
-      "std       0.771161          0.003134      0.001528\n",
-      "min      -0.432318          0.000000      0.001000\n",
-      "25%       0.043440          0.000000      0.002000\n",
-      "50%       0.528657          0.000000      0.002506\n",
-      "75%       1.181114          0.000000      0.003090\n",
-      "max       3.085204          0.038708      0.014630\n",
-      "Number of infeasible solution: 30\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     0.649102          0.000860      0.003234\n",
+      "std      0.757570          0.004546      0.000828\n",
+      "min     -0.396435          0.000000      0.001999\n",
+      "25%      0.075191          0.000000      0.002525\n",
+      "50%      0.470450          0.000000      0.003008\n",
+      "75%      1.092798          0.000000      0.003998\n",
+      "max      2.956495          0.030043      0.005018\n",
+      "Number of infeasible solution: 5\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -1048,35 +1021,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "41ce1302-0459-4062-a321-e43157db796f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean     0.649102          0.000860      0.003307\n",
-      "std      0.757570          0.004546      0.001673\n",
-      "min     -0.396435          0.000000      0.001504\n",
-      "25%      0.075191          0.000000      0.002042\n",
-      "50%      0.470450          0.000000      0.003000\n",
-      "75%      1.092798          0.000000      0.003728\n",
-      "max      2.956495          0.030043      0.011707\n",
-      "Number of infeasible solution: 5\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_lt_5-5.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "6ee67a6c-67a8-49f1-8623-d3d32a9ac5be",
    "metadata": {},
@@ -1086,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "382a0a8a-d846-4182-ab69-7d618edea9cf",
    "metadata": {},
    "outputs": [],
@@ -1099,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "2279da2f-e4f2-4f87-979d-f6ea175b7cc9",
    "metadata": {},
    "outputs": [],
@@ -1113,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "dc92f89e-28b1-483b-a284-7bded54e9958",
    "metadata": {},
    "outputs": [],
@@ -1134,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "1ec4af4d-5722-4162-819c-6c2719bd9d12",
    "metadata": {},
    "outputs": [
@@ -1340,7 +1284,8 @@
       "Epoch 195, Validation Loss: 0.53\n",
       "Early stopping at epoch 195\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 112.14 sec.\n"
      ]
     }
    ],
@@ -1359,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "8eb78c73-6a92-4639-b48c-8e9aa0c8dd37",
    "metadata": {},
    "outputs": [
@@ -1367,30 +1312,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:02<00:00, 494.64it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 509.34it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      0.507475          0.023079      0.000694\n",
-      "std       0.733433          0.030863      0.000538\n",
-      "min      -0.628390          0.000000      0.000000\n",
-      "25%      -0.074570          0.000000      0.000000\n",
-      "50%       0.361055          0.008342      0.000999\n",
-      "75%       0.972961          0.038559      0.001001\n",
-      "max       2.924858          0.190021      0.002530\n",
-      "Number of infeasible solution: 573\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     0.492967          0.022866      0.000672\n",
+      "std      0.725327          0.032927      0.000554\n",
+      "min     -0.568628          0.000000      0.000000\n",
+      "25%     -0.055222          0.000000      0.000000\n",
+      "50%      0.300910          0.006795      0.000999\n",
+      "75%      0.880189          0.035026      0.001005\n",
+      "max      2.924858          0.190021      0.002000\n",
+      "Number of infeasible solution: 58\n"
      ]
     }
    ],
    "source": [
     "from src.heuristic import naive_round\n",
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -1420,35 +1365,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/cq_pr_5-5.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "63519223-1f38-4628-9315-a2ec52f4dafc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean     0.492967          0.022866      0.000819\n",
-      "std      0.725327          0.032927      0.000452\n",
-      "min     -0.568628          0.000000      0.000000\n",
-      "25%     -0.055222          0.000000      0.000511\n",
-      "50%      0.300910          0.006795      0.001000\n",
-      "75%      0.880189          0.035026      0.001008\n",
-      "max      2.924858          0.190021      0.001521\n",
-      "Number of infeasible solution: 58\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_pr_5-5.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
