--- a/test/quadratic/Test Quadratic 500-500.ipynb
+++ b/test/quadratic/Test Quadratic 500-500.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "6a4fb3e2-9c47-4c10-8116-e94be18ea59c",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -539,7 +539,8 @@
       "Epoch 137, Validation Loss: -72.72\n",
       "Early stopping at epoch 137\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 606.23 sec.\n"
      ]
     }
    ],
@@ -558,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -566,29 +567,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [11:33<00:00,  1.44it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [03:37<00:00,  2.17s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    -73.656593          0.007516      0.011249\n",
-      "std       0.588918          0.052571      0.025803\n",
-      "min     -74.352417          0.000000      0.002002\n",
-      "25%     -73.856827          0.000000      0.003652\n",
-      "50%     -73.792507          0.000000      0.004562\n",
-      "75%     -73.610165          0.000000      0.007214\n",
-      "max     -67.608421          0.798371      0.256757\n",
-      "Number of infeasible solution: 46\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean   -73.569562          0.012426      0.014052\n",
+      "std      0.733295          0.070287      0.010182\n",
+      "min    -74.352417          0.000000      0.006555\n",
+      "25%    -73.837213          0.000000      0.010533\n",
+      "50%    -73.761501          0.000000      0.011531\n",
+      "75%    -73.591044          0.000000      0.012420\n",
+      "max    -70.282717          0.643432      0.071285\n",
+      "Number of infeasible solution: 8\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -620,35 +621,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "b2e1bbe4-9236-439f-94ca-08d826980344",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean   -73.569562          0.012426      0.007417\n",
-      "std      0.733295          0.070287      0.010656\n",
-      "min    -74.352417          0.000000      0.002459\n",
-      "25%    -73.837213          0.000000      0.003927\n",
-      "50%    -73.761501          0.000000      0.004852\n",
-      "75%    -73.591044          0.000000      0.006606\n",
-      "max    -70.282717          0.643432      0.098346\n",
-      "Number of infeasible solution: 8\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_lr_500-500.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2dbf8a72-29b9-49c4-b3c1-0d68895c1c1f",
    "metadata": {},
@@ -658,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "36c57dbb-8dee-4976-8922-82a155fe0128",
    "metadata": {},
    "outputs": [],
@@ -671,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "d46b9817-87ac-4af0-b387-b10c9a4998f4",
    "metadata": {},
    "outputs": [],
@@ -686,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "fa8b147f-39c8-4eb7-bb95-93dd8e4cb1cf",
    "metadata": {},
    "outputs": [],
@@ -712,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "c6f5bb17-8c3c-4dcd-952d-caa1d7c4c4fa",
    "metadata": {},
    "outputs": [
@@ -832,7 +804,8 @@
       "Epoch 109, Validation Loss: -69.76\n",
       "Early stopping at epoch 109\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 458.62 sec.\n"
      ]
     }
    ],
@@ -851,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "6584d57e-6b4c-4262-82f5-55735ef17cac",
    "metadata": {},
    "outputs": [
@@ -859,29 +832,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [11:29<00:00,  1.45it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [03:08<00:00,  1.88s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    -73.476697          0.010866      0.010322\n",
-      "std       0.385276          0.052991      0.023218\n",
-      "min     -74.087269          0.000000      0.002002\n",
-      "25%     -73.769244          0.000000      0.003704\n",
-      "50%     -73.515358          0.000000      0.004543\n",
-      "75%     -73.272909          0.000000      0.007407\n",
-      "max     -70.817713          0.658992      0.225816\n",
-      "Number of infeasible solution: 68\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean   -73.456509          0.017393      0.012303\n",
+      "std      0.365448          0.063938      0.007344\n",
+      "min    -74.013422          0.000000      0.005520\n",
+      "25%    -73.758096          0.000000      0.010021\n",
+      "50%    -73.413599          0.000000      0.010543\n",
+      "75%    -73.232405          0.000000      0.011328\n",
+      "max    -71.882978          0.332926      0.059729\n",
+      "Number of infeasible solution: 8\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -913,35 +886,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "f31512b5-5e37-4a57-97ca-3574e7463120",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean   -73.456509          0.017393      0.009755\n",
-      "std      0.365448          0.063938      0.023271\n",
-      "min    -74.013422          0.000000      0.002513\n",
-      "25%    -73.758096          0.000000      0.003572\n",
-      "50%    -73.413599          0.000000      0.004235\n",
-      "75%    -73.232405          0.000000      0.007030\n",
-      "max    -71.882978          0.332926      0.170428\n",
-      "Number of infeasible solution: 8\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_lt_500-500.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2da2f709-fe66-4491-9caf-9bce534589c9",
    "metadata": {},
@@ -951,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "382a0a8a-d846-4182-ab69-7d618edea9cf",
    "metadata": {},
    "outputs": [],
@@ -964,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "27cf9f4f-abe2-485a-aa7f-d89b40e3d31d",
    "metadata": {},
    "outputs": [],
@@ -978,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "73247704-f4ab-46ee-8ed0-c4bf57561121",
    "metadata": {},
    "outputs": [],
@@ -999,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "e8567702-deda-449f-87fb-1adee01fbb70",
    "metadata": {},
    "outputs": [
@@ -1195,7 +1139,8 @@
       "Epoch 185, Validation Loss: -89.08\n",
       "Early stopping at epoch 185\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 304.80 sec.\n"
      ]
     }
    ],
@@ -1214,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "85567b20-13eb-4c80-9077-bb4a617627e3",
    "metadata": {},
    "outputs": [
@@ -1222,30 +1167,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [11:11<00:00,  1.49it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [02:56<00:00,  1.76s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    -90.205391          4.366663      0.000813\n",
-      "std       0.001680          1.280261      0.000504\n",
-      "min     -90.258474          0.739293      0.000000\n",
-      "25%     -90.205338          3.510456      0.000505\n",
-      "50%     -90.205338          4.275835      0.001000\n",
-      "75%     -90.205338          5.230381      0.001009\n",
-      "max     -90.205338          8.286500      0.002515\n",
-      "Number of infeasible solution: 1000\n"
+      "            Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1.000000e+02        100.000000    100.000000\n",
+      "mean  -9.020534e+01          4.344916      0.001298\n",
+      "std    1.285420e-13          1.152884      0.000469\n",
+      "min   -9.020534e+01          1.866629      0.000000\n",
+      "25%   -9.020534e+01          3.649780      0.001002\n",
+      "50%   -9.020534e+01          4.132823      0.001013\n",
+      "75%   -9.020534e+01          5.084770      0.001754\n",
+      "max   -9.020534e+01          8.286500      0.002450\n",
+      "Number of infeasible solution: 100\n"
      ]
     }
    ],
    "source": [
     "from src.heuristic import naive_round\n",
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -1275,35 +1220,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/cq_pr_500-500.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "d19d1eb8-a009-4981-8c98-13b0e3d2157d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1.000000e+02        100.000000    100.000000\n",
-      "mean  -9.020534e+01          4.344916      0.000843\n",
-      "std    1.285420e-13          1.152884      0.000493\n",
-      "min   -9.020534e+01          1.866629      0.000000\n",
-      "25%   -9.020534e+01          3.649780      0.000858\n",
-      "50%   -9.020534e+01          4.132823      0.001000\n",
-      "75%   -9.020534e+01          5.084770      0.001013\n",
-      "max   -9.020534e+01          8.286500      0.001869\n",
-      "Number of infeasible solution: 100\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_pr_500-500.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
