--- a/test/quadratic/Test Quadratic 10-10.ipynb
+++ b/test/quadratic/Test Quadratic 10-10.ipynb
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "6a4fb3e2-9c47-4c10-8116-e94be18ea59c",
    "metadata": {},
    "outputs": [],
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -610,7 +610,8 @@
       "Epoch 147, Validation Loss: -1.36\n",
       "Early stopping at epoch 147\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 213.53 sec.\n"
      ]
     }
    ],
@@ -629,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -637,29 +638,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 206.53it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 203.54it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     -1.598699          0.000422      0.003141\n",
-      "std       1.469656          0.005067      0.001539\n",
-      "min      -4.187225          0.000000      0.000990\n",
-      "25%      -2.758529          0.000000      0.002002\n",
-      "50%      -1.788949          0.000000      0.002996\n",
-      "75%      -0.650110          0.000000      0.003512\n",
-      "max       3.252418          0.128448      0.013126\n",
-      "Number of infeasible solution: 16\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -1.602293          0.000358      0.003116\n",
+      "std      1.672147          0.002678      0.001334\n",
+      "min     -4.187225          0.000000      0.001228\n",
+      "25%     -2.992502          0.000000      0.002016\n",
+      "50%     -1.999704          0.000000      0.002888\n",
+      "75%     -0.622180          0.000000      0.003527\n",
+      "max      3.252418          0.024279      0.008123\n",
+      "Number of infeasible solution: 2\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -691,35 +692,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "924725a5-db7c-4de0-a805-8f5d53e27920",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean    -1.602293          0.000358      0.003604\n",
-      "std      1.672147          0.002678      0.001680\n",
-      "min     -4.187225          0.000000      0.001000\n",
-      "25%     -2.992502          0.000000      0.002491\n",
-      "50%     -1.999704          0.000000      0.003006\n",
-      "75%     -0.622180          0.000000      0.004001\n",
-      "max      3.252418          0.024279      0.009535\n",
-      "Number of infeasible solution: 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_lr_10-10.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2dbf8a72-29b9-49c4-b3c1-0d68895c1c1f",
    "metadata": {},
@@ -729,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "36c57dbb-8dee-4976-8922-82a155fe0128",
    "metadata": {},
    "outputs": [],
@@ -742,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "d46b9817-87ac-4af0-b387-b10c9a4998f4",
    "metadata": {},
    "outputs": [],
@@ -757,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "fa8b147f-39c8-4eb7-bb95-93dd8e4cb1cf",
    "metadata": {},
    "outputs": [],
@@ -783,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "c6f5bb17-8c3c-4dcd-952d-caa1d7c4c4fa",
    "metadata": {},
    "outputs": [
@@ -941,7 +913,8 @@
       "Epoch 147, Validation Loss: -1.52\n",
       "Early stopping at epoch 147\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 225.38 sec.\n"
      ]
     }
    ],
@@ -960,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "6584d57e-6b4c-4262-82f5-55735ef17cac",
    "metadata": {},
    "outputs": [
@@ -968,29 +941,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 222.15it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 210.11it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     -1.794340          0.000859      0.002978\n",
-      "std       1.450804          0.005077      0.001531\n",
-      "min      -4.591527          0.000000      0.000999\n",
-      "25%      -2.884884          0.000000      0.002005\n",
-      "50%      -1.932182          0.000000      0.002515\n",
-      "75%      -0.845053          0.000000      0.003220\n",
-      "max       3.096604          0.063380      0.013864\n",
-      "Number of infeasible solution: 47\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -1.817698          0.001271      0.003038\n",
+      "std      1.652370          0.005377      0.001021\n",
+      "min     -4.591527          0.000000      0.001505\n",
+      "25%     -3.265236          0.000000      0.002008\n",
+      "50%     -2.078343          0.000000      0.003000\n",
+      "75%     -0.703937          0.000000      0.003513\n",
+      "max      3.096604          0.031964      0.006009\n",
+      "Number of infeasible solution: 7\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -1022,35 +995,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "7a69a8c0-fa45-4ab1-b03e-d1df743e5545",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean    -1.817698          0.001271      0.003535\n",
-      "std      1.652370          0.005377      0.001563\n",
-      "min     -4.591527          0.000000      0.001506\n",
-      "25%     -3.265236          0.000000      0.002512\n",
-      "50%     -2.078343          0.000000      0.003137\n",
-      "75%     -0.703937          0.000000      0.003859\n",
-      "max      3.096604          0.031964      0.009074\n",
-      "Number of infeasible solution: 7\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_lt_10-10.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a941a76c-0ea0-4fb9-a23e-51c85a433463",
    "metadata": {},
@@ -1060,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "382a0a8a-d846-4182-ab69-7d618edea9cf",
    "metadata": {},
    "outputs": [],
@@ -1073,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "afdf56b3-5d23-4042-b4c8-a4eb3dbb756a",
    "metadata": {},
    "outputs": [],
@@ -1087,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "c0910211-a95e-4c60-acb5-c764cfffe155",
    "metadata": {},
    "outputs": [],
@@ -1108,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "302fa35d-7b70-4cd8-a56b-5e450223d3ab",
    "metadata": {},
    "outputs": [
@@ -1235,7 +1179,8 @@
       "Epoch 116, Validation Loss: -2.07\n",
       "Early stopping at epoch 116\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 63.96 sec.\n"
      ]
     }
    ],
@@ -1254,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "c75f4de2-7ebf-43b8-ac0b-d1a82a300eb2",
    "metadata": {},
    "outputs": [
@@ -1262,30 +1207,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:02<00:00, 419.36it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 370.58it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     -2.463731          0.079601      0.000526\n",
-      "std       1.345521          0.057805      0.000522\n",
-      "min      -4.873255          0.000000      0.000000\n",
-      "25%      -3.505334          0.037228      0.000000\n",
-      "50%      -2.573169          0.070248      0.000507\n",
-      "75%      -1.588484          0.109723      0.001000\n",
-      "max       2.281136          0.335568      0.001995\n",
-      "Number of infeasible solution: 938\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -2.481321          0.078485      0.000698\n",
+      "std      1.548409          0.057827      0.000486\n",
+      "min     -4.868193          0.000000      0.000000\n",
+      "25%     -3.808517          0.032311      0.000000\n",
+      "50%     -2.755608          0.069870      0.001000\n",
+      "75%     -1.583942          0.111662      0.001006\n",
+      "max      2.281136          0.262004      0.001507\n",
+      "Number of infeasible solution: 93\n"
      ]
     }
    ],
    "source": [
     "from src.heuristic import naive_round\n",
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -1315,35 +1260,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/cq_pr_10-10.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "e8d074c1-2847-4202-8a38-c0bb5d3c0ecb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean    -2.481321          0.078485      0.000724\n",
-      "std      1.548409          0.057827      0.000484\n",
-      "min     -4.868193          0.000000      0.000000\n",
-      "25%     -3.808517          0.032311      0.000000\n",
-      "50%     -2.755608          0.069870      0.000999\n",
-      "75%     -1.583942          0.111662      0.001002\n",
-      "max      2.281136          0.262004      0.001507\n",
-      "Number of infeasible solution: 93\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_pr_10-10.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
