--- a/test/quadratic/Test Quadratic 20-20.ipynb
+++ b/test/quadratic/Test Quadratic 20-20.ipynb
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "6a4fb3e2-9c47-4c10-8116-e94be18ea59c",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -539,7 +539,8 @@
       "Epoch 105, Validation Loss: -4.04\n",
       "Early stopping at epoch 105\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 153.98 sec.\n"
      ]
     }
    ],
@@ -558,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -566,29 +567,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:06<00:00, 160.66it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 133.32it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     -4.127812          0.000731      0.003167\n",
-      "std       0.379696          0.007306      0.001708\n",
-      "min      -5.008674          0.000000      0.000998\n",
-      "25%      -4.414224          0.000000      0.002006\n",
-      "50%      -4.156256          0.000000      0.002574\n",
-      "75%      -3.850213          0.000000      0.003506\n",
-      "max      -2.816607          0.114656      0.013610\n",
-      "Number of infeasible solution: 14\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -4.147645          0.002640      0.003835\n",
+      "std      0.402367          0.014346      0.001390\n",
+      "min     -4.905395          0.000000      0.001506\n",
+      "25%     -4.421822          0.000000      0.003000\n",
+      "50%     -4.193520          0.000000      0.003521\n",
+      "75%     -3.849404          0.000000      0.004545\n",
+      "max     -3.103360          0.106557      0.008517\n",
+      "Number of infeasible solution: 4\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -620,35 +621,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "23a523e7-c787-43c9-a5fa-bb3d3e77cb6b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean    -4.147645          0.002640      0.003365\n",
-      "std      0.402367          0.014346      0.001367\n",
-      "min     -4.905395          0.000000      0.001000\n",
-      "25%     -4.421822          0.000000      0.002410\n",
-      "50%     -4.193520          0.000000      0.003006\n",
-      "75%     -3.849404          0.000000      0.004000\n",
-      "max     -3.103360          0.106557      0.007754\n",
-      "Number of infeasible solution: 4\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_lr_20-20.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2dbf8a72-29b9-49c4-b3c1-0d68895c1c1f",
    "metadata": {},
@@ -658,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "36c57dbb-8dee-4976-8922-82a155fe0128",
    "metadata": {},
    "outputs": [],
@@ -671,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "d46b9817-87ac-4af0-b387-b10c9a4998f4",
    "metadata": {},
    "outputs": [],
@@ -686,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "fa8b147f-39c8-4eb7-bb95-93dd8e4cb1cf",
    "metadata": {},
    "outputs": [],
@@ -712,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "c6f5bb17-8c3c-4dcd-952d-caa1d7c4c4fa",
    "metadata": {},
    "outputs": [
@@ -825,7 +797,8 @@
       "Epoch 102, Validation Loss: -4.11\n",
       "Early stopping at epoch 102\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 154.33 sec.\n"
      ]
     }
    ],
@@ -844,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "6584d57e-6b4c-4262-82f5-55735ef17cac",
    "metadata": {},
    "outputs": [
@@ -852,29 +825,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:06<00:00, 158.14it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 120.94it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     -4.306202          0.000363      0.003165\n",
-      "std       0.304273          0.004174      0.001669\n",
-      "min      -5.053879          0.000000      0.001000\n",
-      "25%      -4.527488          0.000000      0.002040\n",
-      "50%      -4.308718          0.000000      0.002585\n",
-      "75%      -4.088377          0.000000      0.003415\n",
-      "max      -3.373572          0.103516      0.013144\n",
-      "Number of infeasible solution: 14\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -4.328512          0.001035      0.003753\n",
+      "std      0.319526          0.010352      0.000964\n",
+      "min     -5.053879          0.000000      0.002003\n",
+      "25%     -4.550607          0.000000      0.003003\n",
+      "50%     -4.341492          0.000000      0.003526\n",
+      "75%     -4.121362          0.000000      0.004457\n",
+      "max     -3.587453          0.103516      0.008071\n",
+      "Number of infeasible solution: 1\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -906,35 +879,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "50b795b6-60ef-4eb4-a19a-ce66f653e650",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean    -4.328512          0.001035      0.003325\n",
-      "std      0.319526          0.010352      0.001493\n",
-      "min     -5.053879          0.000000      0.002000\n",
-      "25%     -4.550607          0.000000      0.002171\n",
-      "50%     -4.341492          0.000000      0.003000\n",
-      "75%     -4.121362          0.000000      0.003524\n",
-      "max     -3.587453          0.103516      0.008253\n",
-      "Number of infeasible solution: 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_lt_20-20.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "784bfabe-04f9-43c4-bb5e-0891788121c3",
    "metadata": {},
@@ -944,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "48e570a2-9d1d-4d27-9158-8fb3fc7c96ba",
    "metadata": {},
    "outputs": [],
@@ -957,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "bb3b944a-92bf-489c-b9f9-ea32374b1fc5",
    "metadata": {},
    "outputs": [],
@@ -971,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "9a97d7ba-006b-4281-b9fe-fd82cf9d7121",
    "metadata": {},
    "outputs": [],
@@ -992,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "9c2b6120-84fc-43a4-b53c-f2029a42cbb3",
    "metadata": {},
    "outputs": [
@@ -1125,7 +1069,8 @@
       "Epoch 122, Validation Loss: -4.54\n",
       "Early stopping at epoch 122\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 73.72 sec.\n"
      ]
     }
    ],
@@ -1144,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "311c7950-72ed-4c3d-8d14-e0a0ffcb3870",
    "metadata": {},
    "outputs": [
@@ -1152,30 +1097,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 221.05it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 208.69it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     -4.645524          0.038998      0.000583\n",
-      "std       0.331071          0.063282      0.000533\n",
-      "min      -5.477475          0.000000      0.000000\n",
-      "25%      -4.890799          0.000000      0.000000\n",
-      "50%      -4.645010          0.000000      0.000998\n",
-      "75%      -4.414861          0.061435      0.001001\n",
-      "max      -3.588798          0.380077      0.002000\n",
-      "Number of infeasible solution: 465\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -4.659793          0.042595      0.000707\n",
+      "std      0.355136          0.066922      0.000559\n",
+      "min     -5.371934          0.000000      0.000000\n",
+      "25%     -4.935126          0.000000      0.000000\n",
+      "50%     -4.684525          0.005193      0.000999\n",
+      "75%     -4.447333          0.059425      0.001006\n",
+      "max     -3.870809          0.337029      0.002042\n",
+      "Number of infeasible solution: 52\n"
      ]
     }
    ],
    "source": [
     "from src.heuristic import naive_round\n",
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -1205,35 +1150,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/cq_pr_20-20.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "1825c3a0-5e27-462c-89f8-c8665f397bb9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean     0.492967          0.022866      0.000819\n",
-      "std      0.725327          0.032927      0.000452\n",
-      "min     -0.568628          0.000000      0.000000\n",
-      "25%     -0.055222          0.000000      0.000511\n",
-      "50%      0.300910          0.006795      0.001000\n",
-      "75%      0.880189          0.035026      0.001008\n",
-      "max      2.924858          0.190021      0.001521\n",
-      "Number of infeasible solution: 58\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_pr_5-5.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
