--- a/test/quadratic/Test Quadratic 50-50.ipynb
+++ b/test/quadratic/Test Quadratic 50-50.ipynb
@@ -594,7 +594,8 @@
       "Epoch 160, Validation Loss: -12.72\n",
       "Early stopping at epoch 160\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 237.11 sec.\n"
      ]
     }
    ],
@@ -621,29 +622,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:14<00:00, 70.78it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:01<00:00, 71.34it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    -13.117550          0.001559      0.003492\n",
-      "std       0.227264          0.014197      0.001823\n",
-      "min     -13.655529          0.000000      0.001000\n",
-      "25%     -13.294534          0.000000      0.002511\n",
-      "50%     -13.129359          0.000000      0.003004\n",
-      "75%     -12.956336          0.000000      0.003714\n",
-      "max     -12.345956          0.243642      0.012708\n",
-      "Number of infeasible solution: 25\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean   -13.108997          0.000265      0.003088\n",
+      "std      0.249736          0.002647      0.001269\n",
+      "min    -13.655529          0.000000      0.001998\n",
+      "25%    -13.310327          0.000000      0.002234\n",
+      "50%    -13.130720          0.000000      0.002739\n",
+      "75%    -12.955102          0.000000      0.003194\n",
+      "max    -12.364275          0.026468      0.008058\n",
+      "Number of infeasible solution: 1\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -672,35 +673,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/cq_lr_50-50.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "a4d2ea5c-adc6-48ac-a3c8-23f53d8893bf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean   -13.108997          0.000265      0.003396\n",
-      "std      0.249736          0.002647      0.001504\n",
-      "min    -13.655529          0.000000      0.001000\n",
-      "25%    -13.310327          0.000000      0.002519\n",
-      "50%    -13.130720          0.000000      0.003009\n",
-      "75%    -12.955102          0.000000      0.003675\n",
-      "max    -12.364275          0.026468      0.009829\n",
-      "Number of infeasible solution: 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_lr_50-50.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
@@ -880,7 +852,8 @@
       "Epoch 102, Validation Loss: -12.64\n",
       "Early stopping at epoch 102\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 158.61 sec.\n"
      ]
     }
    ],
@@ -907,29 +880,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:14<00:00, 67.36it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:01<00:00, 71.38it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    -12.909986          0.000760      0.003746\n",
-      "std       0.254866          0.009741      0.001991\n",
-      "min     -13.570656          0.000000      0.001347\n",
-      "25%     -13.097337          0.000000      0.002521\n",
-      "50%     -12.916770          0.000000      0.003139\n",
-      "75%     -12.728706          0.000000      0.004084\n",
-      "max     -12.053524          0.197861      0.014313\n",
-      "Number of infeasible solution: 10\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean   -12.905063          0.000497      0.003135\n",
+      "std      0.268591          0.004790      0.001240\n",
+      "min    -13.445088          0.000000      0.001001\n",
+      "25%    -13.093108          0.000000      0.002005\n",
+      "50%    -12.945923          0.000000      0.002999\n",
+      "75%    -12.749801          0.000000      0.003544\n",
+      "max    -12.279643          0.047884      0.008533\n",
+      "Number of infeasible solution: 2\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -961,35 +934,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "27ff9b08-b85f-428b-8a93-36ededbaa43c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean   -12.905063          0.000497      0.003349\n",
-      "std      0.268591          0.004790      0.001224\n",
-      "min    -13.445088          0.000000      0.001347\n",
-      "25%    -13.093108          0.000000      0.002510\n",
-      "50%    -12.945923          0.000000      0.003083\n",
-      "75%    -12.749801          0.000000      0.003999\n",
-      "max    -12.279643          0.047884      0.007667\n",
-      "Number of infeasible solution: 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_lt_50-50.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "7c160fe4-8abb-42b3-9bb6-63c483d40972",
    "metadata": {},
@@ -999,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "382a0a8a-d846-4182-ab69-7d618edea9cf",
    "metadata": {},
    "outputs": [],
@@ -1012,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "b250f89f-9c2e-4dd1-9591-73c3bd2078d7",
    "metadata": {},
    "outputs": [],
@@ -1026,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "153d0575-6d9e-42ba-be4c-3d97f8940550",
    "metadata": {},
    "outputs": [],
@@ -1047,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "16471b1e-b12d-470e-94ea-d0da98b0963c",
    "metadata": {},
    "outputs": [
@@ -1150,7 +1094,8 @@
       "Epoch 92, Validation Loss: -14.00\n",
       "Early stopping at epoch 92\n",
       "Best model loaded.\n",
-      "Training complete.\n"
+      "Training complete.\n",
+      "The training time is 61.95 sec.\n"
      ]
     }
    ],
@@ -1169,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "645d2f69-3621-4ccc-8fab-ab3742c439c8",
    "metadata": {},
    "outputs": [
@@ -1177,30 +1122,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:14<00:00, 67.55it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:01<00:00, 53.16it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    -14.160757          0.066880      0.000734\n",
-      "std       0.234957          0.106689      0.000542\n",
-      "min     -14.814219          0.000000      0.000000\n",
-      "25%     -14.316845          0.000000      0.000000\n",
-      "50%     -14.178223          0.000000      0.001000\n",
-      "75%     -14.002037          0.105844      0.001003\n",
-      "max     -13.433465          0.628216      0.002513\n",
-      "Number of infeasible solution: 476\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean   -14.155025          0.061082      0.001068\n",
+      "std      0.258000          0.104191      0.000516\n",
+      "min    -14.745079          0.000000      0.000000\n",
+      "25%    -14.324969          0.000000      0.001000\n",
+      "50%    -14.162546          0.000000      0.001001\n",
+      "75%    -14.008844          0.082220      0.001123\n",
+      "max    -13.439211          0.498455      0.002997\n",
+      "Number of infeasible solution: 44\n"
      ]
     }
    ],
    "source": [
     "from src.heuristic import naive_round\n",
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
     "                  \"name\": \"test\"}\n",
@@ -1230,35 +1175,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/cq_pr_50-50.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "277b370a-dda3-43cd-980f-948aeec1207c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000        100.000000    100.000000\n",
-      "mean   -14.155025          0.061082      0.000664\n",
-      "std      0.258000          0.104191      0.000517\n",
-      "min    -14.745079          0.000000      0.000000\n",
-      "25%    -14.324969          0.000000      0.000000\n",
-      "50%    -14.162546          0.000000      0.001000\n",
-      "75%    -14.008844          0.082220      0.001001\n",
-      "max    -13.439211          0.498455      0.001692\n",
-      "Number of infeasible solution: 44\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"result/cq_pr_50-50.csv\", index_col=0).iloc[:100]\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
    ]
   },
   {
